--- a/style.css
+++ b/style.css
@@ -1,28 +1,64 @@
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 16px;
+}
+
 .die {
-    background: #fff;
-    border: 1px solid #999;
-    float: left;
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 34px;
-    height: 34px;
-    margin-right: 10px;
-    margin-top: 2px;
-    padding: 0;
-    text-align: center;
-    width: 34px;
-    box-shadow: none !important;
-  }
+  background: #fff;
+  border: 1px solid #999;
+  float: left;
+  font-size: 1.5em;
+  font-weight: bold;
+  line-height: 34px;
+  height: 34px;
+  margin-right: 10px;
+  margin-top: 2px;
+  padding: 0;
+  text-align: center;
+  width: 34px;
+  box-shadow: none !important;
+}
 
 .die-true {
-    border: 4px solid #A00;
-    line-height: 28px;
-  }
-
-.roll-button {
-    clear: both;
+  border: 4px solid #A00;
+  line-height: 28px;
 }
+
+/* .roll-button {
+  clear: both;
+} */
+
 table, th, td {
-    border: 1px solid black;
-  }
-  
+  border: 1px solid black;
+}
+
+.score-sheet {
+  position: absolute;
+  left: 40%;
+  width: 30%;
+}
+
+#score-table {
+  border: 2px solid #442200;
+  border-collapse: collapse;
+  width: 100%;
+}
+#score-table th, #score-table td {
+  padding: 7px;
+}
+
+#score-table th {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: left;
+  background-color: #e60073;
+  color: white;
+}
+
+.score-value {
+  font-weight: bold;
+  text-align: center;
+}
+.score-value:hover {
+  background-color: #BBB;
+}
