--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 16px;
+  font-size: 12px;
+}
+
+#play-area {
+  width: 60%;
+  position: fixed;
 }
 
 .die {
   background: #fff;
   border: 1px solid #999;
   float: left;
-  font-size: 1.5em;
+  font-size: 2em;
   font-weight: bold;
   line-height: 34px;
   height: 34px;
@@ -30,6 +35,7 @@ body {
 
 table, th, td {
   border: 1px solid black;
+  height: 100%;
 }
 
 .score-sheet {
@@ -44,7 +50,7 @@ table, th, td {
   width: 100%;
 }
 #score-table th, #score-table td {
-  padding: 7px;
+  padding: 4px;
 }
 
 #score-table th {
@@ -58,7 +64,11 @@ table, th, td {
 .score-value {
   font-weight: bold;
   text-align: center;
+  color: #333;
 }
 .score-value:hover {
-  background-color: #BBB;
+  background-color: #BB9;
 }
+
+tr:nth-child(2n){background-color: #ffcccc;}
+tr:nth-child(2n+1){background-color: #e1e1f3;}
