--- a/style.css
+++ b/style.css
@@ -24,11 +24,13 @@ body {
   text-align: center;
   box-shadow: none !important;
 }
+
 .die:focus {
   /* border: 2px solid #AA0; */
   background-color: #E3E3AA;
   outline: none;
 }
+
 .die:hover {
   /* transition-duration: 1.2s; */
   background-color: #E3E3AA;
@@ -39,7 +41,8 @@ body {
   border: 4px solid #A00;
   line-height: 2px;
 }
-.dice-holder {
+
+#dice-holder {
   position: fixed;
   top: 10%;
   left: 5%;
@@ -57,21 +60,25 @@ body {
   text-decoration: none;
   display: inline-block;
 }
+
 #roll-button {
   position: fixed;
   top: 30%;
   left: 8%;
   border: 2px solid black;
 }
+
 #new-game-button {
   position: fixed;
   background-color: #605;
   top: 60%;
   left: 8%;
 }
+
 .unusable {
   background-color: #444;
 }
+
 #status {
   position: absolute;
   text-align: left;
@@ -80,6 +87,7 @@ body {
   font-size: 2em;
   color: #333;
 }
+
 #roll-number {
   color: #A49;
   font-size: 1.2em;
@@ -100,7 +108,7 @@ table, th, td {
   height: 100%;
 }
 
-.score-sheet {
+#score-sheet {
   position: absolute;
   left: 40%;
   width: 30%;
@@ -111,6 +119,7 @@ table, th, td {
   border-collapse: collapse;
   width: 100%;
 }
+
 #score-table th, #score-table td {
   padding: 4px;
 }
@@ -128,9 +137,15 @@ table, th, td {
   text-align: center;
   color: #333;
 }
+
 .score-value:hover {
   background-color: #BB9;
 }
 
-tr:nth-child(2n){background-color: #ffcccc;}
-tr:nth-child(2n+1){background-color: #e1e1f3;}
+tr:nth-child(2n) {
+  background-color: #ffcccc;
+}
+
+tr:nth-child(2n+1) {
+  background-color: #e1e1f3;
+}
